# lazyfetch

./: Cargo.toml  LICENSE  README.md  deny.toml  rust-toolchain.toml
.github/workflows/: ci.yml  release.yml
crates/auth/: Cargo.toml
crates/auth/src/: lib.rs  resolver.rs
crates/auth/tests/: dynvar_only.rs  resolvers.rs
crates/core/: Cargo.toml
crates/core/src/: auth.rs  catalog.rs  dynvars.rs  env.rs  error.rs  exec.rs  history.rs  lib.rs  method_serde.rs  ports.rs  primitives.rs  secret.rs
crates/core/tests/: auth_walk.rs  build_curl.rs  catalog.rs  dynvars.rs  interpolate.rs  redact.rs
crates/http/: Cargo.toml
crates/http/src/: lib.rs
crates/http/tests/: send.rs
crates/import/: Cargo.toml
crates/import/src/: curl.rs  lib.rs  postman.rs
crates/import/tests/: curl_golden.rs  postman_golden.rs
crates/import/tests/fixtures/: postman_basic.json
crates/import/tests/fixtures/curl/: ansi_c_string.txt  chrome_post_json.txt  chrome_simple_get.txt  cmd_shell_rejected.txt  data_urlencode.txt  firefox_get.txt  get_force.txt  last_content_type_wins.txt  multipart_file.txt  plain_bash.txt  safari_get.txt  user_only.txt  user_pass.txt
crates/storage/: Cargo.toml
crates/storage/src/: atomic.rs  collection.rs  env.rs  history.rs  lib.rs
crates/storage/tests/: atomic.rs  collection_roundtrip.rs  env_roundtrip.rs  history_concurrent.rs  mutations.rs
crates/tui/: Cargo.toml
crates/tui/src/: adapters.rs  app.rs  commands.rs  editor.rs  event.rs  help.rs  keymap.rs  kv_editor.rs  layout.rs  lib.rs  motion.rs  request_pane.rs  response.rs  sender.rs  terminal.rs
crates/tui/src/keymap/: collections.rs  env.rs  mod.rs  request.rs  response.rs  url.rs
crates/tui/tests/: keymap.rs  kv_editor.rs  layout_snapshot.rs  repeat_last.rs  sender_port.rs  shell_out.rs
crates/tui/tests/snapshots/: layout_snapshot__initial.snap  layout_snapshot__initial.snap.new
docs/superpowers/plans/: 2026-05-07-lazyfetch-v1.md  2026-05-08-lazyfetch-v2.md
docs/superpowers/specs/: 2026-05-07-lazyfetch-design.md  2026-05-08-lazyfetch-v2-request-editor.md
scripts/: check-core-purity.sh
