[workspace]
resolver = "2"
members  = ["crates/core","crates/http","crates/storage","crates/auth","crates/import","crates/tui","crates/bin"]

[workspace.package]
edition = "2021"
rust-version = "1.78"
license = "MIT"
authors = ["Ariel Onoriaga <onoriagaariel@gmail.com>"]

[workspace.dependencies]
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
serde_yaml  = "0.9"
thiserror   = "1"
anyhow      = "1"
tokio       = { version = "1", features = ["rt-multi-thread","macros","sync","time","fs"] }
tracing     = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter","fmt"] }
secrecy     = "0.8"
ulid        = { version = "1", features = ["serde"] }
blake3      = "1"
http        = "1"
chrono      = { version = "0.4", features = ["serde"] }

[profile.release]
lto = "thin"
codegen-units = 1
strip = "debuginfo"
