[workspace]
resolver = "2"
members  = ["crates/core","crates/http","crates/storage","crates/auth","crates/import","crates/tui","crates/bin"]

[workspace.package]
version = "0.2.0"
edition = "2021"
rust-version = "1.85"
license = "MIT"
authors = ["Ariel Onoriaga <onoriagaariel@gmail.com>"]
homepage = "https://github.com/arielonoriaga/lazyfetch"
repository = "https://github.com/arielonoriaga/lazyfetch"
keywords = ["http", "tui", "postman", "cli", "ratatui"]
categories = ["command-line-utilities", "development-tools", "network-programming"]

[workspace.dependencies]
# Internal crates — published to crates.io as `lazyfetch-*`. Each crate
# Cargo.toml uses `path` for local builds and `version` for crates.io.
lazyfetch-core    = { path = "crates/core",    version = "0.2.0" }
lazyfetch-http    = { path = "crates/http",    version = "0.2.0" }
lazyfetch-storage = { path = "crates/storage", version = "0.2.0" }
lazyfetch-auth    = { path = "crates/auth",    version = "0.2.0" }
lazyfetch-import  = { path = "crates/import",  version = "0.2.0" }
lazyfetch-tui     = { path = "crates/tui",     version = "0.2.0" }

# External crates.
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
serde_yaml  = "0.9"
thiserror   = "1"
anyhow      = "1"
tokio       = { version = "1", features = ["rt-multi-thread","macros","sync","time","fs"] }
tracing     = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter","fmt"] }
secrecy     = { version = "0.8", features = ["serde"] }
ulid        = { version = "1", features = ["serde"] }
blake3      = "1"
http        = "1"
chrono      = { version = "0.4", features = ["serde"] }

[profile.release]
lto = "thin"
codegen-units = 1
strip = "debuginfo"
