[package]
name = "lazyfetch-auth"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
lazyfetch-core = { path = "../core" }
async-trait    = "0.1"
base64         = "0.22"
thiserror      = { workspace = true }

[dev-dependencies]
tokio    = { workspace = true, features = ["macros","rt","time"] }
secrecy  = { workspace = true }
ulid     = { workspace = true }
http     = { workspace = true }
