[package]
name = "lazyfetch-auth"
description = "Auth resolvers (Bearer/Basic/ApiKey, OAuth2 scaffolding) for lazyfetch"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
readme = "../../README.md"
keywords.workspace = true
categories.workspace = true

[dependencies]
lazyfetch-core = { workspace = true }
async-trait    = "0.1"
base64         = "0.22"
thiserror      = { workspace = true }

[dev-dependencies]
tokio    = { workspace = true, features = ["macros","rt","time"] }
secrecy  = { workspace = true }
ulid     = { workspace = true }
http     = { workspace = true }
