[package]
name = "lazyfetch-core"
description = "Pure domain core for lazyfetch — IO-free types, ports, interpolation, redaction"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
readme = "../../README.md"
keywords.workspace = true
categories.workspace = true

[dependencies]
serde       = { workspace = true }
thiserror   = { workspace = true }
secrecy     = { workspace = true }
ulid        = { workspace = true }
chrono      = { workspace = true }
http        = { workspace = true }
blake3      = { workspace = true }
async-trait = "0.1"
anyhow      = { workspace = true }
urlencoding = "2"
tracing     = { workspace = true }
uuid        = { version = "1", features = ["v4"] }
rand        = "0.8"
base64      = "0.22"

[dev-dependencies]
base64     = "0.22"
proptest   = "1"
serde_json = { workspace = true }
serde_yaml = { workspace = true }
tokio      = { workspace = true, features = ["macros", "rt"] }
uuid       = { version = "1", features = ["v4"] }
