[package]
name = "lazyfetch-http"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
lazyfetch-core = { path = "../core" }
reqwest        = { version = "0.12", default-features = false, features = ["rustls-tls","gzip","brotli","deflate","stream","multipart"] }
async-trait    = "0.1"
tokio          = { workspace = true }
http           = { workspace = true }
anyhow         = { workspace = true }

[dev-dependencies]
wiremock = "0.6"
tokio    = { workspace = true, features = ["macros","rt"] }
