[package]
name = "lazyfetch-import"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
lazyfetch-core = { path = "../core" }
serde      = { workspace = true }
serde_json = { workspace = true }
thiserror  = { workspace = true }
http       = { workspace = true }
ulid       = { workspace = true }
