[package]
name = "lazyfetch-import"
description = "Postman v2.1 → lazyfetch collection importer with DoS bounds"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
readme = "../../README.md"
keywords.workspace = true
categories.workspace = true

[dependencies]
lazyfetch-core = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
thiserror  = { workspace = true }
http       = { workspace = true }
ulid       = { workspace = true }
