[package]
name = "lazyfetch-storage"
description = "Filesystem adapters for lazyfetch — atomic writes, YAML collections, JSONL history"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
readme = "../../README.md"
keywords.workspace = true
categories.workspace = true

[dependencies]
lazyfetch-core = { workspace = true }
serde       = { workspace = true }
serde_yaml  = { workspace = true }
serde_json  = { workspace = true }
thiserror   = { workspace = true }
secrecy     = { workspace = true, features = ["serde"] }
ulid        = { workspace = true }
chrono      = { workspace = true }
blake3      = { workspace = true }
fd-lock     = "4"
tempfile    = "3"
tracing     = { workspace = true }

[dev-dependencies]
http       = { workspace = true }
serde_json = { workspace = true }
