[package]
name = "lazyfetch-tui"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
lazyfetch-core    = { path = "../core" }
lazyfetch-storage = { path = "../storage" }
lazyfetch-http    = { path = "../http" }
lazyfetch-auth    = { path = "../auth" }
ratatui           = "0.28"
crossterm         = "0.28"
anyhow            = { workspace = true }
secrecy           = { workspace = true }
ulid              = { workspace = true }
http              = { workspace = true }
tokio             = { workspace = true }
serde_json        = { workspace = true }
arboard           = { version = "3", default-features = false }

[dev-dependencies]
insta = "1"
lazyfetch-core = { path = "../core" }
ulid           = { workspace = true }
