[package]
name = "lazyfetch-tui"
description = "ratatui-based TUI front-end for lazyfetch"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
readme = "../../README.md"
keywords.workspace = true
categories.workspace = true

[dependencies]
lazyfetch-core    = { workspace = true }
lazyfetch-storage = { workspace = true }
lazyfetch-http    = { workspace = true }
lazyfetch-auth    = { workspace = true }
ratatui           = "0.28"
crossterm         = "0.28"
anyhow            = { workspace = true }
secrecy           = { workspace = true }
ulid              = { workspace = true }
http              = { workspace = true }
tokio             = { workspace = true }
serde_json        = { workspace = true }
tui-textarea      = { version = "0.6", default-features = false, features = ["crossterm","ratatui"] }
tempfile          = "3"

[dev-dependencies]
insta = "1"
lazyfetch-core = { path = "../core" }
ulid           = { workspace = true }
