[package]
name = "lazyfetch-tui"
description = "ratatui-based TUI front-end for lazyfetch"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
readme = "../../README.md"
keywords.workspace = true
categories.workspace = true

[dependencies]
lazyfetch-core    = { workspace = true }
lazyfetch-storage = { workspace = true }
ratatui           = "0.28"
crossterm         = "0.28"
anyhow            = { workspace = true }
secrecy           = { workspace = true }
ulid              = { workspace = true }
http              = { workspace = true }
tokio             = { workspace = true }
serde_json        = { workspace = true }
tui-textarea      = { version = "0.6", default-features = false, features = ["crossterm","ratatui"] }
tempfile          = "3"
async-trait       = "0.1"

[dev-dependencies]
insta = "1"
lazyfetch-core = { path = "../core" }
ulid           = { workspace = true }
chrono         = { workspace = true }
http           = { workspace = true }
async-trait    = "0.1"
tokio          = { workspace = true, features = ["rt-multi-thread", "macros"] }
